@@ -18,18 +18,17 @@ package org.apache.kafka.coordinator.group.metrics;
 
 import org.apache.kafka.common.TopicPartition;
 import org.apache.kafka.common.metrics.Sensor;
-import org.apache.kafka.common.utils.Utils;
 import org.apache.kafka.coordinator.common.runtime.CoordinatorMetricsShard;
 import org.apache.kafka.coordinator.group.classic.ClassicGroupState;
 import org.apache.kafka.coordinator.group.modern.consumer.ConsumerGroup.ConsumerGroupState;
-import org.apache.kafka.coordinator.group.modern.share.ShareGroup;
+import org.apache.kafka.coordinator.group.modern.share.ShareGroup.ShareGroupState;
+import org.apache.kafka.coordinator.group.streams.StreamsGroup.StreamsGroupState;
 import org.apache.kafka.timeline.SnapshotRegistry;
 import org.apache.kafka.timeline.TimelineLong;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import java.util.Collections;
 import java.util.Map;
 import java.util.Objects;
 import java.util.concurrent.atomic.AtomicLong;
@@ -76,7 +75,12 @@ public class GroupCoordinatorMetricsShard implements CoordinatorMetricsShard {
     /**
      * Share group size gauge counters keyed by the metric name.
      */
-    private final Map<ShareGroup.ShareGroupState, TimelineGaugeCounter> shareGroupGauges;
+    private volatile Map<ShareGroupState, Long> shareGroupGauges;
+
+    /**
+     * Streams group size gauge counters keyed by the metric name.
+     */
+    private volatile Map<StreamsGroupState, Long> streamsGroupGauges;
 
     /**
      * All sensors keyed by the sensor name. A Sensor object is shared across all metrics shards.
@@ -107,17 +111,10 @@ public class GroupCoordinatorMetricsShard implements CoordinatorMetricsShard {
         numOffsetsTimelineGaugeCounter = new TimelineGaugeCounter(new TimelineLong(snapshotRegistry), new AtomicLong(0));
         numClassicGroupsTimelineCounter = new TimelineGaugeCounter(new TimelineLong(snapshotRegistry), new AtomicLong(0));
 
-        this.classicGroupGauges = Collections.emptyMap();
-        this.consumerGroupGauges = Collections.emptyMap();
-
-        this.shareGroupGauges = Utils.mkMap(
-            Utils.mkEntry(ShareGroup.ShareGroupState.EMPTY,
-                new TimelineGaugeCounter(new TimelineLong(snapshotRegistry), new AtomicLong(0))),
-            Utils.mkEntry(ShareGroup.ShareGroupState.STABLE,
-                new TimelineGaugeCounter(new TimelineLong(snapshotRegistry), new AtomicLong(0))),
-            Utils.mkEntry(ShareGroup.ShareGroupState.DEAD,
-                new TimelineGaugeCounter(new TimelineLong(snapshotRegistry), new AtomicLong(0)))
-        );
+        this.classicGroupGauges = Map.of();
+        this.consumerGroupGauges = Map.of();
+        this.streamsGroupGauges = Map.of();
+        this.shareGroupGauges = Map.of();
 
         this.globalSensors = Objects.requireNonNull(globalSensors);
         this.topicPartition = Objects.requireNonNull(topicPartition);
@@ -142,6 +139,30 @@ public class GroupCoordinatorMetricsShard implements CoordinatorMetricsShard {
      */
     public void setConsumerGroupGauges(Map<ConsumerGroupState, Long> consumerGroupGauges) {
         this.consumerGroupGauges = consumerGroupGauges;
+    }
+    
+    /**
+     * Set the number of streams groups.
+     * This method should be the only way to update the map and is called by the scheduled task
+     * that updates the metrics in {@link org.apache.kafka.coordinator.group.GroupCoordinatorShard}.
+     * Breaking this will result in inconsistent behavior.
+     *
+     * @param streamsGroupGauges The map counting the number of streams groups in each state.
+     */
+    public void setStreamsGroupGauges(Map<StreamsGroupState, Long> streamsGroupGauges) {
+        this.streamsGroupGauges = streamsGroupGauges;
+    }
+
+    /**
+     * Set the number of share groups.
+     * This method should be the only way to update the map and is called by the scheduled task
+     * that updates the metrics in {@link org.apache.kafka.coordinator.group.GroupCoordinatorShard}.
+     * Breaking this will result in inconsistent behavior.
+     *
+     * @param shareGroupGauges The map counting the number of share groups in each state.
+     */
+    public void setShareGroupGauges(Map<ShareGroupState, Long> shareGroupGauges) {
+        this.shareGroupGauges = shareGroupGauges;
     }
 
     /**
@@ -205,6 +226,52 @@ public class GroupCoordinatorMetricsShard implements CoordinatorMetricsShard {
         return consumerGroupGauges.values().stream()
             .mapToLong(Long::longValue).sum();
     }
+    
+    /**
+     * Get the number of streams groups in the specified state.
+     *
+     * @param state  the streams group state.
+     *
+     * @return   The number of streams groups in `state`.
+     */
+    public long numStreamsGroups(StreamsGroupState state) {
+        Long counter = streamsGroupGauges.get(state);
+        if (counter != null) {
+            return counter;
+        }
+        return 0L;
+    }
+
+    /**
+     * @return The total number of streams groups.
+     */
+    public long numStreamsGroups() {
+        return streamsGroupGauges.values().stream()
+            .mapToLong(Long::longValue).sum();
+    }
+
+    /**
+     * Get the number of share groups in the specified state.
+     *
+     * @param state  the share group state.
+     *
+     * @return   The number of share groups in `state`.
+     */
+    public long numShareGroups(ShareGroupState state) {
+        Long counter = shareGroupGauges.get(state);
+        if (counter != null) {
+            return counter;
+        }
+        return 0L;
+    }
+
+    /**
+     * @return The total number of share groups.
+     */
+    public long numShareGroups() {
+        return shareGroupGauges.values().stream()
+            .mapToLong(Long::longValue).sum();
+    }
 
     @Override
     public void record(String sensorName) {
@@ -238,14 +305,6 @@ public class GroupCoordinatorMetricsShard implements CoordinatorMetricsShard {
             long value = numOffsetsTimelineGaugeCounter.timelineLong.get(offset);
             numOffsetsTimelineGaugeCounter.atomicLong.set(value);
         }
-
-        this.shareGroupGauges.forEach((__, gaugeCounter) -> {
-            long value;
-            synchronized (gaugeCounter.timelineLong) {
-                value = gaugeCounter.timelineLong.get(offset);
-            }
-            gaugeCounter.atomicLong.set(value);
-        });
     }
 
     /**
@@ -260,74 +319,5 @@ public class GroupCoordinatorMetricsShard implements CoordinatorMetricsShard {
         Map<ClassicGroupState, Long> classicGroupGauges
     ) {
         this.classicGroupGauges = classicGroupGauges;
-    }
-
-    public void incrementNumShareGroups(ShareGroup.ShareGroupState state) {
-        TimelineGaugeCounter gaugeCounter = shareGroupGauges.get(state);
-        if (gaugeCounter != null) {
-            synchronized (gaugeCounter.timelineLong) {
-                gaugeCounter.timelineLong.increment();
-            }
-        }
-    }
-
-    public void decrementNumShareGroups(ShareGroup.ShareGroupState state) {
-        TimelineGaugeCounter gaugeCounter = shareGroupGauges.get(state);
-        if (gaugeCounter != null) {
-            synchronized (gaugeCounter.timelineLong) {
-                gaugeCounter.timelineLong.decrement();
-            }
-        }
-    }
-
-    public long numShareGroups(ShareGroup.ShareGroupState state) {
-        TimelineGaugeCounter gaugeCounter = shareGroupGauges.get(state);
-        if (gaugeCounter != null) {
-            return gaugeCounter.atomicLong.get();
-        }
-        return 0L;
-    }
-
-    public long numShareGroups() {
-        return shareGroupGauges.values().stream()
-            .mapToLong(timelineGaugeCounter -> timelineGaugeCounter.atomicLong.get()).sum();
-    }
-
-    // could be called from ShareGroup to indicate state transition
-    public void onShareGroupStateTransition(
-            ShareGroup.ShareGroupState oldState,
-            ShareGroup.ShareGroupState newState
-    ) {
-        if (newState != null) {
-            switch (newState) {
-                case EMPTY:
-                    incrementNumShareGroups(ShareGroup.ShareGroupState.EMPTY);
-                    break;
-                case STABLE:
-                    incrementNumShareGroups(ShareGroup.ShareGroupState.STABLE);
-                    break;
-                case DEAD:
-                    incrementNumShareGroups(ShareGroup.ShareGroupState.DEAD);
-                    break;
-                default:
-                    log.warn("Unknown new share group state: {}", newState);
-            }
-        }
-
-        if (oldState != null) {
-            switch (oldState) {
-                case EMPTY:
-                    decrementNumShareGroups(ShareGroup.ShareGroupState.EMPTY);
-                    break;
-                case STABLE:
-                    decrementNumShareGroups(ShareGroup.ShareGroupState.STABLE);
-                    break;
-                case DEAD:
-                    decrementNumShareGroups(ShareGroup.ShareGroupState.DEAD);
-                    break;
-                default:
-                    log.warn("Unknown previous share group state: {}", oldState);
-            }
-        }
     }
 }
